# ring_buffer

./: .gitignore  CMakeLists.txt  main.c
doc/: README.md
include/: ring_buffer.h  ring_cfg.h
ring_buffer/: ring_buffer.c  ring_buffer.h
src/: main.c  ring_buffer.c
